revamped to be stand alone React component library for a natural typing effect

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,10 @@
 {
     "include": [
-        "./src/**/*"
-, "src/TransformerWorker.js"    ],
+        "./src/**/*", 
+        "src/TransformerWorker.js",
+        "**/*.ts",
+        "**/*.tsx"
+    ],
     "compilerOptions": {
         "strict": true,
         "esModuleInterop": true,
@@ -10,6 +13,7 @@
             "es2023"
         ],
         "jsx": "react-jsx",
-        "downlevelIteration": true
+        "downlevelIteration": true,
+        "typeRoots": ["./types", "./node_modules/@types"]
     }
 }
