--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "ij-quote-generator",
+  "name": "react-natural-typing-effect",
   "version": "1.0.0",
-  "description": "Pull a random Infinite Jest quote using React and TypeScript typing effect UX",
+  "description": "A simple React component library made to display a string's characters as Span elements within a Div element using a natural-feeling typing animation that is configurable",
   "keywords": [
     "typescript",
     "react",
-    "typing effect"
+    "natural typing effect"
   ],
   "main": "src/index.tsx",
   "dependencies": {
