--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-natural-typing-effect",
+  "name": "react-typing-effect",
   "version": "1.0.0",
   "description": "A simple React component library made to display a string's characters as Span elements within a Div element using a natural-feeling typing animation that is configurable",
   "keywords": [
