--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,10 @@
         "sourceMap": true,
         "allowJs": false,
         "declaration": true,
+        "declarationDir": "types",
+        "emitDeclarationOnly": true,
         "moduleResolution": "node",
+        "allowSyntheticDefaultImports": true,
         "forceConsistentCasingInFileNames": true,
         "noImplicitReturns": true,
         "noImplicitThis": true,
