--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-natural-typing-effect",
   "version": "1.2.0",
-  "description": "A simple React component library made to display a string's characters as Span elements within a Div element using a natural-feeling typing animation that is configurable",
+  "description": "A simple React component library made to display a string's characters as Span elements within a Div element using a natural-feeling typing animation that is configurable and internationalized.",
   "keywords": [
     "typescript",
     "react",
